# apps/backend/src/modules/events/events.routes.ts
@@ -1,12 +1,13 @@
 import express from 'express';
-import { eventsController } from './events.controllers';
-import { rateLimitMiddleware } from '../../middlewares/rateLimitMiddleware';
+import { EEventsRoutes } from '@packages/enum';
+import { eventSearchController } from './events.controllers';
 import { authMiddleware } from '../../middlewares/authMiddleware';
+import { rateLimitMiddleware } from '../../middlewares/rateLimitMiddleware';
 
 const router = express.Router();
 
 router.use(authMiddleware);
 router.use(rateLimitMiddleware);
-router.post('/', eventsController);
+router.post(EEventsRoutes.search, eventSearchController);
 
 export default router;
